Se agrega un footer

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </div>        
         </section>
     </main>    
+    <footer>
+      ©Made by
+      <h6>Cristian Chuquiruna</h6>
+    </footer>
 </body>
 
 <script src="script.js"></script>
